# PhysC

./: .gitignore  README.md  physc_backend_exp.md  physc_engine_exp.md  physc_frontend_exp.md
physc-frontend/: .env.example  .gitignore  CMakeLists.txt  build_wasm.bat  index.html  package-lock.json  package.json  vite.config.js
physc-frontend/engine/collision/: AABB.h  CollisionManager.cpp  CollisionManager.h  ContactConstraint.h  DynamicTree.cpp  DynamicTree.h  Narrowphase.cpp  Narrowphase.h
physc-frontend/engine/constraints/: Constraint.h  DistanceConstraint.h  GearConstraint.h  HingeConstraint.h  MotorConstraint.h  PulleyConstraint.h  SliderConstraint.h  WeldConstraint.h
physc-frontend/engine/core/: Handle.h  Math.h  Pool.h
physc-frontend/engine/physics/: BodyManager.cpp  BodyManager.h  ShapeManager.cpp  ShapeManager.h  World.h
physc-frontend/engine/solver/: XPBDSolver.h
physc-frontend/engine/wasm/: Bindings.cpp
physc-frontend/public/: physicsWorker.js  solver.js  solver.wasm
physc-frontend/src/: App.jsx  index.css
physc-frontend/src/api/: authApi.js  client.js  machineApi.js  userApi.js
physc-frontend/src/auth/: AuthContext.jsx
physc-frontend/src/builder/: builderStore.js  componentRegistry.js  serializationSystem.js
physc-frontend/src/commands/: CommandManager.js
physc-frontend/src/components/: PhysCLogo.jsx  ProtectedRoute.jsx  SliderRow.css  SliderRow.jsx
physc-frontend/src/hooks/: usePhysicsWorker.js  useWasm.js
physc-frontend/src/landing/: FeatureCard.jsx  GradientText.jsx  PhysicsCanvas.jsx  SectionLabel.jsx  StepCard.jsx  data.jsx  (+3 more)
(+92 files in other folders)
